# gemini

ble-hid-test/: Cargo.toml  rust-analyzer.json
ble-hid-test/.cargo/: config.toml
docs/: choc_v2
espnow-test/: .gitignore  Cargo.toml  Justfile
espnow-test/.cargo/: config.toml
espnow-test/src/: main.rs
firmware-idf/: .gitignore  CMakeLists.txt  flake.nix  sdkconfig  sdkconfig.old
firmware-idf/main/: .clangd  idf_component.yml  main.cpp
firmware-rs/: .gitignore  Cargo.toml  devenv.nix
firmware-rs/.cargo/: config.toml
hardware/gemini_left/: fp-info-cache  fp-lib-table  gemini_left.kicad_pcb  gemini_left.kicad_prl  gemini_left.kicad_pro  gemini_left.kicad_sch  sym-lib-table
hardware/gemini_right/: fp-lib-table  gemini_right.kicad_pcb  gemini_right.kicad_prl  gemini_right.kicad_pro  gemini_right.kicad_sch  sym-lib-table  ~gemini_right.kicad_pcb.lck  ~gemini_right.kicad_sch.lck
hardware/lib/: CH582F.kicad_sym  CW2015.kicad_sym  CW2015CSAC.kicad_sym  ESP32-C3-WROOM-02-N4.kicad_sym  ETA9742.kicad_sym  XL9555__TSSOP-24_.kicad_sym  ch9329.kicad_sym  ip5407.kicad_sym  sl2.1s.kicad_sym
hardware/lib/ESP32C3WROOM02N4.pretty/: ESP32C3WROOM02N4.kicad_mod
hardware/lib/FPC_1x06_p0.5.pretty/: FPC-SMD_6P-P0.50_XUNPU_FPC-05F-6PH20.kicad_mod
hardware/lib/IP5306_4.35V/: IP5306_4.35V.dcm  IP5306_4.35V.lib  IP5306_4.35V.mod  IP5306_4_35V.kicad_sym  SOIC127P600X165-9N.kicad_mod
hardware/lib/QFN-28_L4.0-W4.0-P0.40-EP2.8.pretty/: QFN-28_L4.0-W4.0-P0.40-BL-EP2.8.kicad_mod
hardware/lib/SOIC127P600X175-9N.pretty/: SOIC127P600X175-9N.kicad_mod
hardware/lib/SOP65P640X120-24N.pretty/: SOP65P640X120-24N.kicad_mod
hardware/lib/antenna.pretty/: ANT-F-3-2.4G-1.6mmFR4-WCH.kicad_mod  ANT-F-3-2.4G-1.6mmFR4-WCH_mirror.kicad_mod
production/right/: gemini_right-B_Cu.gbr  gemini_right-B_Mask.gbr  gemini_right-B_Paste.gbr  gemini_right-B_Silkscreen.gbr  gemini_right-Edge_Cuts.gbr  gemini_right-F_Cu.gbr  gemini_right-F_Mask.gbr  gemini_right-F_Paste.gbr  gemini_right-F_Silkscreen.gbr  gemini_right-NPTH-drl_map.ps  gemini_right-NPTH.drl  gemini_right-PTH-drl_map.ps  gemini_right-PTH.drl  gemini_right-bottom.pos  gemini_right-top.pos  gemini_right.csv
(+6 files in other folders)
