[package]
name = "ble-hid-test"
version = "0.1.0"
authors = ["j4ger <xiayuxuan@live.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "app"
test = false
bench = false

[profile.release]
debug = true

[dependencies]
esp32c3-hal = "0.15.0"
esp-backtrace = { version = "0.11.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-wifi  = { version = "0.3.0", features = ["esp32c3", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }

