[package]
name = "espnow_test"
version = "0.1.0"
authors = ["j4ger <xiayuxuan@live.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
master = []

[dependencies]
hal = { package = "esp32c3-hal", version = "0.7.0", features = [
  "embassy",
  "embassy-time-timg0",
  "async",
] }
esp-backtrace = { version = "0.5.0", features = [
  "esp32c3",
  "panic-handler",
  "print-uart",
] }
esp-println = { version = "0.3.1", features = ["esp32c3", "log"] }
critical-section = "1.1.1"
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = [
  "ble",
  "esp-now",
  "esp32c3-async",
  "esp32c3",
] }
log = "0.4.17"
embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", features = [
  "nightly",
  "integrated-timers",
] }
embassy-time = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/" }
embassy-futures = { package = "embassy-futures", git = "https://github.com/embassy-rs/embassy/" }
static_cell = "1.0.0"
embedded-hal-async = "0.2.0-alpha.0"

[profile.release]
lto = "off"

[profile.dev]
lto = "off"

[profile.dev.package.esp-wifi]
opt-level = 3
